unpackaged/main/default/objects/SWOT_Objective__c/SWOT_Objective__c.object-meta.xml
<CustomObject>
    <label>SWOT Objective</label>
    <nameField>
        <displayFormat>SWO-{000000}</displayFormat>
        <label>SWOT Objective Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SWOT Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>