unpackaged/main/default/objects/SWOT_Objective__c/fields/Account_Objective__c.field-meta.xml
<CustomField>
    <fullName>Account_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Objective</label>
    <referenceTo>Account_Objective__c</referenceTo>
    <relationshipLabel>SWOTs</relationshipLabel>
    <relationshipName>SWOT_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>