unpackaged/main/default/objects/SWOT_Objective__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <formula>Account_Objective__r.Objective__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objective</label>
    <type>Text</type>
</CustomField>