unpackaged/main/default/objects/SWOT_Objective__c/fields/Objective_Type__c.field-meta.xml
<CustomField>
    <fullName>Objective_Type__c</fullName>
    <formula>TEXT(Account_Objective__r.Objective_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objective Type</label>
    <type>Text</type>
</CustomField>