unpackaged/main/default/objects/SWOT_Objective__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <formula>TEXT(SWOT__r.Strengths__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strengths</label>
    <type>Text</type>
</CustomField>