unpackaged/main/default/objects/SWOT_Objective__c/fields/SWOT__c.field-meta.xml
<CustomField>
    <fullName>SWOT__c</fullName>
    <label>SWOT</label>
    <referenceTo>SWOT__c</referenceTo>
    <relationshipLabel>Objectives</relationshipLabel>
    <relationshipName>SWOT_Objectives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>