unpackaged/main/default/objects/SWOT_Objective__c/fields/Workstream__c.field-meta.xml
<CustomField>
    <fullName>Workstream__c</fullName>
    <formula>TEXT( Account_Objective__r.WorkStream__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workstream</label>
    <type>Text</type>
</CustomField>